# fee

./: .gitignore  CMakeLists.txt  README.md  app.py  build.sh  dashboard.html  main.py  run_game.py  run_server.py  run_web.py  stock_market_tycoon.py  web_interface.py
backend/: bot_ai.py  game_logic.py
debug-roadtrip-chill-project/: index.html
debug-roadtrip-chill-project/js/: audio.js  camera.js  config.js  game.js  multiplayer.js  save.js  vehicle.js  world.js
frontend/: index.html
frontend/css/: styles.css
frontend/js/: game.js
game/: __init__.py  cards.py  company.py  events.py  game.py  market.py  player.py  sector.py
include/: board.h  game.h  market.h  player.h  ui.h
modes/: __init__.py  extended.py  quick.py  standard.py
src/: board.cpp  game.cpp  main.cpp  market.cpp  player.cpp  ui.cpp
stock_market_pro/: README.md  requirements.txt  server.py
stock_market_pro/game_logic/: core.py
stock_market_pro/public/: index.html
stock_market_pro/public/css/: styles.css
stock_market_pro/public/js/: game.js
utils/: helpers.py
web/: app.py
web/static/css/: style.css
web/static/js/: game.js
web/templates/: index.html
